-
Bug
-
Resolution: Fixed
-
Major
-
Lustre 2.8.0
-
None
-
3
-
9223372036854775807
During my local double MDTs failover test, I found a few LBUG because it did not check the existence of objects before retrieving attrs. Unfortunately I can not find those LBUG message anymore, but the problem on code is quite obvious. I will cook a patch.
- is related to
-
LU-7455 Tracking tickets to make DNE pass soak-test.
-
- Resolved
-